# neomma

./: .gitignore  opencode.json  pyproject.toml  readme.md  readme_zh.md
.github/workflows/: test.yml
neomma/: __init__.py  cp-install.py  ln-install.py  mma-gb.py  mma-libdoc.py  mma-renum.py  mma.py
neomma/MMA/: after.py  alloc.py  appdirs.py  auto.py  chords.py  chordtable.py  common.py  debug.py  docs.py  exits.py  file.py  func.py  gbl.py  grooves.py  harmony.py  keysig.py  lyric.py  macro.py  main.py  mdefine.py  midi.py  midiC.py  midiIn.py  midiM.py  midifuncs.py  midinote.py  miditables.py  notelen.py  options.py  ornament.py  parse.py  parseCL.py  pat.py  patAria.py  patArpeggio.py  patBass.py  patChord.py  patDrum.py  patPlectrum.py  patScale.py  (+26 more)
neomma/egs/: mkall.py
neomma/lib/alexis/: rd.py
neomma/plugins/addgm/: plugin.py
neomma/plugins/copyright/: plugin.py
neomma/plugins/extend/: plugin.py
neomma/plugins/hello/: plugin.py
neomma/plugins/qriff/: plugin.py
neomma/plugins/rhythm/: plugin.py
neomma/plugins/strumpattern/: plugin.py
neomma/util/: mma-splitrec.py  mmatabs.py  mup2mma.py
tests/: high_level_test.py  high_level_tests.py
tests/files/: after.mid  after.mma  convert4to5.mid  convert4to5.mma  deep-river-bar2-3.mid  deep-river-tempo120.mid  deep-river.mma  delay_solo.mid  delay_solo.mma  frankie.mid  frankie.mma  ornament_bass.mid  ornament_bass.mma  rpitch_bass.mid  rpitch_bass.mma
